@@ -139,7 +139,10 @@
    * Security-related options for the HTTP server
    **/
 
-  // Whether remote hosts can connect to the HTTP server
+  // Whether remote hosts can connect to the HTTP server. For security
+  // reasons, starting with Orthanc 1.5.8, as soon as this option is
+  // set to "true", authentication is enabled, and you have to declare
+  // an user in "RegisteredUsers" to access the HTTP server.
   "RemoteAccessAllowed" : false,
 
   // Whether or not SSL is enabled
@@ -149,7 +152,9 @@
   // SSL is enabled)
   "SslCertificate" : "certificate.pem",
 
-  // Whether or not the password protection is enabled
+  // Whether or not the password protection is enabled. Starting with
+  // Orthanc 1.5.8, password protection is automatically enabled as
+  // soon as "RemoteAccessAllowed" is set to "true".
   "AuthenticationEnabled" : false,
 
   // The list of the registered users. Because Orthanc uses HTTP
